# roguelike

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  main.cpp
CMake/: FindBearLibTerminal.cmake
include/: controls.h  ground.h  math-utils.h  obstacles.h  obstaclesmanager.h  player.h
include/game/: coins-manager.h  coins.h  coinsmanager.h  controls.h  door.h  ground.h  math-utils.h  obstacle-manager.h  obstacle.h  obstacles.h  obstaclesmanager.h  player.h
include/game/components/: coin_component.h  collider_component.h  movement_component.h  obstacle_component.h  obstacle_control_system.h  player_control_component.h  price_component.h  scoreboard_component.h  stamp_remove_component.h  step_left_component.h  texture_component.h  transform_component.h
include/game/scenes/: game_lv1_scene.h  game_lv2_scene.h  game_lv3_scene.h  game_over_scene.h  game_scene.h  game_scene_lv1.h  game_scene_lv2.h  result_scene.h  title_scene.h
include/game/systems/: collision_system.h  creating_entity_system.h  game_over_system.h  generate_random_map_system.h  level_up_system.h  movement_system.h  pick_up_coin.h  (+7 more)
include/lib/: context.h  i_scene.h  scene_manager.h
levels/: level_1  level_2  level_3
src/: coins-manager.cpp  coins.cpp  coinsmanager.cpp  controls.cpp  door.cpp  ground.cpp  main.cpp  math-utils.cpp  obstacle-manager.cpp  obstacle.cpp  obstacles.cpp  obstaclesmanager.cpp  player.cpp
src/game/: main.cpp
src/lib/: scene_manager.cpp
src/scenes/: game_over_scene.cpp  game_scene.cpp  game_scene_lv1.cpp  game_scene_lv2.cpp  result_scene.cpp  title_scene.cpp
(+34 files in other folders)
